--- a/OMERS.ipynb
+++ b/OMERS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOle2VM/0HcPugiHcb6pAwm",
+      "authorship_tag": "ABX9TyNnDrjsmxOvwBZ2vqy1FQ+S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2044,6 +2044,17 @@
     {
       "cell_type": "code",
       "source": [
+        "combined_df_indexed.to_excel('combined_df_indexed.xlsx', index=False)\n"
+      ],
+      "metadata": {
+        "id": "fadDYTCsaKl8"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Checking on numeric datatypes details\n",
         "num=combined_df_indexed.select_dtypes(include=['int64','float64'])\n",
         "num.describe().T"
@@ -2051,7 +2062,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 708
+          "height": 725
         },
         "id": "3MBiN2iO46Bl",
         "outputId": "9e889e4a-eccd-4e4b-a9f3-65714fb3292e"
@@ -3711,7 +3722,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 957
         },
         "id": "gZNEsvn9VddH",
         "outputId": "97c099a6-1bb3-413a-bda5-86926db00b88"
